@@ -29,6 +29,10 @@
  */
 
 #include "regenc.h"
+#include "encindex.h"
+#ifndef ENCINDEX_ASCII
+#define ENCINDEX_ASCII 0
+#endif
 
 OnigEncodingDefine(ascii, ASCII) = {
   onigenc_single_byte_mbc_enc_len,
@@ -47,7 +51,7 @@ OnigEncodingDefine(ascii, ASCII) = {
   onigenc_not_support_get_ctype_code_range,
   onigenc_single_byte_left_adjust_char_head,
   onigenc_always_true_is_allowed_reverse_match,
-  0,
+  ENCINDEX_ASCII,
   ONIGENC_FLAG_NONE,
 };
 ENC_ALIAS("BINARY", "ASCII-8BIT")
